Install dependencies, create postgres db, deploy geoserver